[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "aiosqlite>=0.22.1",
    "cryptography>=49.0.0",
    "dnspython>=2.8.0",
    "fastapi>=0.137.1",
    "fpdf2>=2.8.7",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyopenssl>=26.3.0",
    "pyotp>=2.10.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "python-whois>=0.9.6",
    "qrcode[pil]>=8.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
]
